<resources>
    <string name="app_name">BalamutBatut</string>
    <string name="item_action">Мероприятия</string>
    <string name="item_progress">Прогресс</string>
    <string name="item_profile">Профиль</string>
    <string name="item_groups">Группы</string>
    <string name="item_group">Группа</string>
    <string name="item_student">Ученик</string>
    <string name="item_element">Элемент</string>
    <string name="item_elements">Элементы</string>
    <string name="item_new_group">Новая группа</string>
    <string name="item_all_elements">Списки элементов</string>
    <string name="item_not_group">Ученики без группы</string>
    <string name="item_settings">Настройки</string>
    <string name="students_fragment">Состав группы</string>
    <string name="change_group_program">Изменить программу тренировок группы</string>

    <string name="password">Пароль</string>
    <string name="email">Электронная почта</string>
    <string name="or">Или</string>
    <string name="google_sign_up">Войти с помощью Google</string>
    <string name="sign_up">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="OK">OK</string>
    <string name="no_trainer">Я не тренер</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="invalid_password">Пароль должен содержать >5 символов</string>
    <string name="invalid_username">Неверно введён логин</string>
    <string name="invalid_code">Неверный код</string>
    <string name="invalid_code_message">Введенный код неверный. Уточните код у администратора.</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="success_register">Вы успешно зарегестрированы!</string>

    <string name="min_length">6 символов</string>
    <string name="message_settings">Нажмите на поле, чтобы изменить свои личные данные</string>
    <string name="message_trainer">Введите код, если вы тренер</string>
    <string name="are_you_trainer">Я - тренер</string>
    <string name="yes">Да</string>
    <string name="error_kod_trainer">Код должен состоять из 6 символов</string>
    <string name="default_data_birthday">01.01.2000</string>

    <string name="title_dialog_info">Информация о достижении</string>
    <string name="title_set_data">Установка данных о достижении</string>
    <string name="all_person_data">Личные данные</string>
    <string name="last_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="trainer_kod">Код</string>
    <string name="all_number">0123456789</string>
    <string name="sex">Пол</string>
    <string name="group">Группа</string>
    <string name="birthday">Дата рождения</string>
    <string name="date">Введите дату рождения</string>
    <string name="finish_registr">Завершить регистрацию</string>
    <string name="your_date">Ваша дата рождения:</string>

    <string name="add_first_name">Введите ваше имя</string>
    <string name="add_second_name">Введите вашу фамилию</string>
    <string name="add_date">Введите дату вашего рождения</string>
    <string name="add_sex">Введите ваш пол</string>

    <string name="male">Мужской</string>
    <string name="female">Женский</string>

    <string name="message_register">Введите информацию о себе,
        чтобы тренер мог добавить вас в группу</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="addElements">Добавить элементы</string>
    <string name="name_group">Имя группы</string>
    <string name="desc_group">Описание группы</string>
    <string name="add_group">Добавить группу</string>
    <string name="search">Поиск ученика</string>
    <string name="icon">icon</string>
    <string name="rating">Рейтинг</string>
    <string name="quantityElements">Элементы: </string>
    <string name="rating_name">Рейтинг</string>
    <string name="batut_coin">Количетсво BAT:</string>
    <string name="invite">Пригласить друга</string>
    <string name="pay">Оплатить BatutCoin</string>
    <string name="scan">Списать BatutCoin</string>
    <string name="scan_qr">Сканировать</string>
    <string name="rang">Ранг:</string>
    <string name="load_video">Загрузить видео</string>
    <string name="text_video">Предпросмотр видео</string>
    <string name="load_video_in_cloud">Загрузить видео в облако</string>
    <string name="error_load">Загрузите видео</string>
    <string name="desc_element">Описание</string>
    <string name="desc">Описание:</string>
    <string name="error_desc">Введите описание элемента</string>
    <string name="change">Изменить</string>
    <string name="edit">Изменить</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="color">Цвет</string>
    <string name="name_element">Название</string>
    <string name="error_name">Введите название элемента</string>
    <string name="all_group_fragment_label">Элементы</string>
    <string name="create">Создать</string>

    <string-array name="levels">
        <item>Низкая</item>
        <item>Средняя</item>
        <item>Высокая</item>
    </string-array>
</resources>