<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/registrFragment">

    <navigation android:id="@+id/navigation"
        app:startDestination="@id/profileFragment">
        <fragment
            android:id="@+id/profileFragment"
            android:name="com.castprogramms.balamutbatut.ui.profile.ProfileFragment"
            android:label="@string/item_profile"
            tools:layout="@layout/profile_fragment" />
        <fragment
            android:id="@+id/progressFragment"
            android:name="com.castprogramms.balamutbatut.ui.progress.ProgressFragment"
            android:label="@string/item_progress"
            tools:layout="@layout/progress_fragment" />
    </navigation>
    <navigation android:id="@+id/trainer_navigation"
        app:startDestination="@id/profile_Fragment">
        <fragment
            android:id="@+id/profile_Fragment"
            android:name="com.castprogramms.balamutbatut.ui.profile.profile_trainer.ProfileTrainerFragment"
            android:label="@string/item_profile"
            tools:layout="@layout/profile_fragment_trainer"/>
        <fragment
            android:id="@+id/group_Fragment"
            android:name="com.castprogramms.balamutbatut.ui.group.GroupsFragment"
            android:label="@string/item_groups"
            tools:layout="@layout/groups_fragment">
            <action
                android:id="@+id/action_group_Fragment_to_studentsFragment"
                app:destination="@id/studentsFragment" />
        </fragment>
        <fragment
            android:id="@+id/studentsFragment"
            android:name="com.castprogramms.balamutbatut.ui.group.StudentsFragment"
            android:label="StudentsFragment" />

    </navigation>
    <fragment
        android:id="@+id/registrFragment"
        android:name="com.castprogramms.balamutbatut.ui.registr.RegistrFragment"
        android:label="RegistrFragment" >
        <action
            android:id="@+id/action_registrFragment_to_navigation"
            app:destination="@id/navigation" />
        <action
            android:id="@+id/action_registrFragment_to_insertDataUserFragment"
            app:destination="@id/insertDataUserFragment" />
        <action
            android:id="@+id/action_registrFragment_to_trainer_navigation"
            app:destination="@id/trainer_navigation" />
    </fragment>
    <fragment
        android:id="@+id/insertDataUserFragment"
        android:name="com.castprogramms.balamutbatut.ui.insertdatauser.InsertDataUserFragment"
        android:label="InsertDataUserFragment" >
        <action
            android:id="@+id/action_insertDataUserFragment_to_navigation"
            app:destination="@id/navigation" />
        <action
            android:id="@+id/action_insertDataUserFragment_to_trainer_navigation"
            app:destination="@id/trainer_navigation" />
    </fragment>
</navigation>